facet-args/tests/snapshots/err__error_negative_value_for_unsigned.snap
---
source: tests/err.rs
expression: "$crate :: common :: DiagnosticDisplayWrapper(& err).to_string()"
---
  × Could not parse CLI arguments
   ╭────
 1 │ --count -10 
   ·         ─┬─
   ·          ╰── reflection error: Operation failed on shape usize: Failed to parse string value
   ╰────
